--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   </div>
 
   <script>
-    const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbz2i78LVNeh3YwQJYiP6QyhgtPp-z1rYa0Xypj2u-FJT8AsxR-EGbqEkm4gSGquUD6g/exec";
+    const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbyXo-by-gbLFTc5edE3FhUXDKtPh4BaM6cj8EghT2o5cneTAE3T4rvPNQLakO-hOC4/exec";
 
     const btnLogin = document.getElementById('btn-login');
     const btnSignup = document.getElementById('btn-signup');
@@ -134,7 +134,7 @@
 
       const res = await fetch(WEBAPP_URL, {
         method: "POST",
-        body: JSON.stringify({username,email,password}),
+        body: JSON.stringify({type:"signup", username, email, password}),
         headers: {"Content-Type":"application/json"}
       });
       const data = await res.json();
@@ -157,7 +157,7 @@
 
       const res = await fetch(WEBAPP_URL, {
         method: "POST",
-        body: JSON.stringify({email,password}),
+        body: JSON.stringify({type:"login", email, password}),
         headers: {"Content-Type":"application/json"}
       });
       const data = await res.json();
