--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Konvy Accounts — Black & White</title>
+  <title>Konvy Accounts</title>
   <style>
     :root{ --bg:#000; --fg:#fff; --muted: #bdbdbd; }
     *{box-sizing:border-box}
