--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
     <footer>
-      Built for Google Sheets demo — works across devices.
+      Built MEOW.
     </footer>
   </div>
 
