--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <header>
       <div class="logo">K</div>
       <div>
-        <h1>Konvy Accounts</h1>
+        <h1>Konvy Accounts22</h1>
         <p class="lead">Black & White demo — sign up, sign in, and land on a blank dashboard.</p>
       </div>
     </header>
