--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Konvy Accounts</title>
+  <title>Konvy Accounts — Black & White</title>
   <style>
     :root{ --bg:#000; --fg:#fff; --muted: #bdbdbd; }
     *{box-sizing:border-box}
@@ -37,6 +37,7 @@
     .center{display:flex;align-items:center;justify-content:center;height:100%}
 
     footer{margin-top:18px;color:var(--muted);font-size:13px;text-align:center}
+    .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);padding:8px 10px;border-radius:8px;color:var(--fg);cursor:pointer}
   </style>
 </head>
 <body>
@@ -44,7 +45,7 @@
     <header>
       <div class="logo">K</div>
       <div>
-        <h1>Konvy Accounts22</h1>
+        <h1>Konvy Accounts33</h1>
         <p class="lead">Black & White demo — sign up, sign in, and land on a blank dashboard.</p>
       </div>
     </header>
@@ -106,13 +107,31 @@
     </div>
 
     <footer>
-      Built MEOW.
+      Built with Firebase Authentication — works across devices.
     </footer>
   </div>
 
-  <script>
-    const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbyXo-by-gbLFTc5edE3FhUXDKtPh4BaM6cj8EghT2o5cneTAE3T4rvPNQLakO-hOC4/exec";
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
+  <script>
+    // ======================
+    // 🔹 YOUR FIREBASE CONFIG
+    // ======================
+    const firebaseConfig = {
+      apiKey: "AIzaSyD2M35gv68ILULRqlRVlO5E4oLCXbj1RaM",
+      authDomain: "konvy-57910.firebaseapp.com",
+      projectId: "konvy-57910",
+      storageBucket: "konvy-57910.firebasestorage.app",
+      messagingSenderId: "97699914787",
+      appId: "1:97699914787:web:f2ba164292f3a3f07ebd96",
+      measurementId: "G-330N3W9E4N"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    // UI elements
     const btnLogin = document.getElementById('btn-login');
     const btnSignup = document.getElementById('btn-signup');
     const loginForm = document.getElementById('login-form');
@@ -122,6 +141,7 @@
     const userEmailEl = document.getElementById('user-email');
     const dashContent = document.getElementById('dash-content');
 
+    // Switch tabs
     btnLogin.addEventListener('click', ()=>{ btnLogin.classList.add('active'); btnSignup.classList.remove('active'); loginForm.style.display='block'; signupForm.style.display='none'; });
     btnSignup.addEventListener('click', ()=>{ btnSignup.classList.add('active'); btnLogin.classList.remove('active'); loginForm.style.display='none'; signupForm.style.display='block'; });
 
@@ -132,20 +152,12 @@
       const email = document.getElementById('signup-email').value.trim();
       const password = document.getElementById('signup-password').value;
 
-      const res = await fetch(WEBAPP_URL, {
-        method: "POST",
-        body: JSON.stringify({type:"signup", username, email, password}),
-        headers: {"Content-Type":"application/json"}
-      });
-      const data = await res.json();
-      if(data.success){
-        alert("Signup successful! Please login.");
-        loginForm.style.display='block';
-        signupForm.style.display='none';
-        btnLogin.classList.add('active');
-        btnSignup.classList.remove('active');
-      } else {
-        alert(data.message);
+      try {
+        const userCredential = await auth.createUserWithEmailAndPassword(email,password);
+        localStorage.setItem('username', username); // store username
+        renderSignedIn(username,email);
+      } catch(error){
+        alert(error.message);
       }
     });
 
@@ -155,24 +167,22 @@
       const email = document.getElementById('login-email').value.trim();
       const password = document.getElementById('login-password').value;
 
-      const res = await fetch(WEBAPP_URL, {
-        method: "POST",
-        body: JSON.stringify({type:"login", email, password}),
-        headers: {"Content-Type":"application/json"}
-      });
-      const data = await res.json();
-      if(data.success){
-        renderSignedIn(data.username,email);
-      } else {
-        alert(data.message);
+      try {
+        const userCredential = await auth.signInWithEmailAndPassword(email,password);
+        const username = localStorage.getItem('username') || "User";
+        renderSignedIn(username,email);
+      } catch(error){
+        alert(error.message);
       }
     });
 
     // Logout
-    logoutBtn.addEventListener('click', ()=>{
+    logoutBtn.addEventListener('click', async ()=>{
+      await auth.signOut();
       renderSignedOut();
     });
 
+    // Render functions
     function renderSignedIn(username,email){
       welcomeEl.textContent = `Hi, ${username}`;
       userEmailEl.textContent = email;
@@ -190,6 +200,16 @@
       document.getElementById('forms').style.display='block';
       dashContent.innerHTML = '<div class="center muted">Blank dashboard — nothing here yet.</div>';
     }
+
+    // Auto-check auth state
+    auth.onAuthStateChanged((user)=>{
+      if(user){
+        const username = localStorage.getItem('username') || "User";
+        renderSignedIn(username,user.email);
+      } else {
+        renderSignedOut();
+      }
+    });
   </script>
 </body>
 </html>
