--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ footer{margin-top:18px;color:var(--muted);font-size:13px;text-align:center}
 <header>
   <div class="logo">K</div>
   <div>
-    <h1>Konvy Accounts</h1>
+    <h1>Konvy Accounts67</h1>
     <p class="lead">Black & White demo — login, redeem keys, and manage products if owner.</p>
   </div>
 </header>
