--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ footer{margin-top:18px;color:var(--muted);font-size:13px;text-align:center}
 .hidden{display:none;}
 #owner-controls{margin-top:12px;}
 #owner-controls input{width:100%;margin-bottom:6px;}
+#orders-list, #keys-list{margin-top:12px;}
+#orders-list div, #keys-list div{border:1px solid rgba(255,255,255,0.1); padding:6px; border-radius:6px; margin-bottom:4px;}
 </style>
 </head>
 <body>
@@ -42,8 +44,8 @@ footer{margin-top:18px;color:var(--muted);font-size:13px;text-align:center}
 <header>
   <div class="logo">K</div>
   <div>
-    <h1>Konvy AccountsKK</h1>
-    <p class="lead">Black & White demo — login, redeem keys, and manage products if owner.</p>
+    <h1>Konvy AccountsAA</h1>
+    <p class="lead">Redeem keys, view order history, manage products if owner.</p>
   </div>
 </header>
 
@@ -91,7 +93,7 @@ footer{margin-top:18px;color:var(--muted);font-size:13px;text-align:center}
         </div>
       </div>
 
-      <div id="dash-content" style="min-height:220px;display:flex;align-items:center;justify-content:center">
+      <div id="dash-content" style="min-height:220px;display:flex;flex-direction:column;">
         <div class="center muted">Blank dashboard — nothing here yet.</div>
       </div>
 
@@ -99,6 +101,7 @@ footer{margin-top:18px;color:var(--muted);font-size:13px;text-align:center}
       <div id="redeem-section" class="hidden" style="margin-top:12px;">
         <input type="text" id="redeem-key-input" placeholder="Enter product key">
         <button id="redeem-key-btn">Redeem Key</button>
+        <div id="orders-list"></div>
       </div>
 
       <!-- Owner controls -->
@@ -107,6 +110,7 @@ footer{margin-top:18px;color:var(--muted);font-size:13px;text-align:center}
         <input type="text" id="owner-product-name" placeholder="Product Name">
         <input type="text" id="owner-key" placeholder="Key">
         <button id="create-key-btn">Create Key</button>
+        <div id="keys-list"></div>
       </div>
     </div>
   </div>
@@ -148,28 +152,27 @@ const dashContent = document.getElementById('dash-content');
 const redeemSection = document.getElementById('redeem-section');
 const redeemInput = document.getElementById('redeem-key-input');
 const redeemBtn = document.getElementById('redeem-key-btn');
+const ordersList = document.getElementById('orders-list');
 const ownerControls = document.getElementById('owner-controls');
 const ownerProductName = document.getElementById('owner-product-name');
 const ownerKeyInput = document.getElementById('owner-key');
 const createKeyBtn = document.getElementById('create-key-btn');
+const keysList = document.getElementById('keys-list');
 
 // Switch tabs
 btnLogin.addEventListener('click', ()=>{ btnLogin.classList.add('active'); btnSignup.classList.remove('active'); loginForm.style.display='block'; signupForm.style.display='none'; });
 btnSignup.addEventListener('click', ()=>{ btnSignup.classList.add('active'); btnLogin.classList.remove('active'); loginForm.style.display='none'; signupForm.style.display='block'; });
 
-// Auto-create special owner key
+// Owner special key
 const OWNER_KEY = "KDFIHFdawdd124345#$@#FIGwdwdaHE@";
-const OWNER_KEY_DATA = { product: "Owner Access", role: "owner" };
 db.collection("keys").doc(OWNER_KEY).get().then(doc=>{
   if(!doc.exists){
-    db.collection("keys").doc(OWNER_KEY).set(OWNER_KEY_DATA)
-      .then(()=>console.log("Owner key created automatically"))
-      .catch(err=>console.error("Error creating owner key:", err));
+    db.collection("keys").doc(OWNER_KEY).set({product:"Owner Access", role:"owner"});
   }
 });
 
 // Signup
-signupForm.addEventListener('submit', async (e)=>{
+signupForm.addEventListener('submit', async e=>{
   e.preventDefault();
   const username = document.getElementById('signup-username').value.trim();
   const email = document.getElementById('signup-email').value.trim();
@@ -187,7 +190,7 @@ signupForm.addEventListener('submit', async (e)=>{
 });
 
 // Login
-loginForm.addEventListener('submit', async (e)=>{
+loginForm.addEventListener('submit', async e=>{
   e.preventDefault();
   const email = document.getElementById('login-email').value.trim();
   const password = document.getElementById('login-password').value;
@@ -218,6 +221,9 @@ function renderSignedIn(username,email,role){
 
   if(role==="owner") ownerControls.classList.remove('hidden');
   else ownerControls.classList.add('hidden');
+
+  loadOrders();
+  if(role==="owner") loadKeys();
 }
 
 function renderSignedOut(){
@@ -230,6 +236,8 @@ function renderSignedOut(){
   dashContent.innerHTML = '<div class="center muted">Blank dashboard — nothing here yet.</div>';
   redeemSection.classList.add('hidden');
   ownerControls.classList.add('hidden');
+  ordersList.innerHTML="";
+  keysList.innerHTML="";
 }
 
 // Redeem key
@@ -237,27 +245,33 @@ redeemBtn.addEventListener('click', async ()=>{
   const key = redeemInput.value.trim();
   if(!key) return alert("Enter a key");
 
+  const user = auth.currentUser;
+
+  // Check if already redeemed
+  const existing = await db.collection("orders").where("userId","==",user.uid).where("key","==",key).get();
+  if(!existing.empty) return alert("You already redeemed this key");
+
   const keyDoc = await db.collection("keys").doc(key).get();
   if(!keyDoc.exists) return alert("Invalid key");
 
   const keyData = keyDoc.data();
-  const user = auth.currentUser;
-
   await db.collection("orders").add({
     userId: user.uid,
-    username: keyData.username || user.email,
-    product:keyData.product,
+    key: key,
+    product: keyData.product,
     redeemedAt: firebase.firestore.Timestamp.now()
   });
 
   if(keyData.role==="owner"){
     await db.collection("users").doc(user.uid).update({role:"owner"});
     alert("Owner role granted!");
-    renderSignedIn(keyData.username || user.email,user.email,"owner");
+    renderSignedIn(user.email,user.email,"owner");
   } else {
     alert(`Redeemed ${keyData.product}`);
   }
   redeemInput.value="";
+  loadOrders();
+  if(auth.currentUser) loadKeys();
 });
 
 // Owner create key
@@ -269,7 +283,40 @@ createKeyBtn.addEventListener('click', async ()=>{
   alert("Key created!");
   ownerProductName.value="";
   ownerKeyInput.value="";
+  loadKeys();
 });
+
+// Load redeemed orders for customer
+async function loadOrders(){
+  ordersList.innerHTML="";
+  const user = auth.currentUser;
+  const snapshot = await db.collection("orders").where("userId","==",user.uid).orderBy("redeemedAt","desc").get();
+  if(snapshot.empty) ordersList.innerHTML="<div class='muted'>No orders yet</div>";
+  else snapshot.forEach(doc=>{
+    const d = doc.data();
+    const date = d.redeemedAt.toDate().toLocaleString();
+    const div = document.createElement("div");
+    div.textContent = `${d.product} — Redeemed: ${date}`;
+    ordersList.appendChild(div);
+  });
+}
+
+// Load all keys for owner
+async function loadKeys(){
+  keysList.innerHTML="";
+  const snapshot = await db.collection("keys").get();
+  if(snapshot.empty) keysList.innerHTML="<div class='muted'>No keys created yet</div>";
+  else snapshot.forEach(doc=>{
+    const d = doc.data();
+    // Check if used
+    db.collection("orders").where("key","==",doc.id).get().then(orders=>{
+      const status = orders.empty ? "Unused" : "Used";
+      const div = document.createElement("div");
+      div.textContent = `Key: ${doc.id} | Product: ${d.product} | Status: ${status}`;
+      keysList.appendChild(div);
+    });
+  });
+}
 
 // Auto-login
 auth.onAuthStateChanged(async (user)=>{
