--- a/index.html
+++ b/index.html
@@ -19,15 +19,49 @@ main{flex:1;display:flex;overflow:hidden;}
 h2{margin-top:0;color:var(--accent);}
 .card{background:rgba(255,255,255,0.02);padding:20px;border-radius:12px;margin-bottom:12px;}
 input,button{font-size:14px;}
-input[type=text]{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.1);background:transparent;color:var(--fg);}
+input[type=text],input[type=password]{width:100%;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.1);background:transparent;color:var(--fg);}
 button{padding:10px;border:none;border-radius:8px;background:var(--fg);color:var(--bg);cursor:pointer;font-weight:700;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:8px;text-align:left;border-bottom:1px solid rgba(255,255,255,0.2);}
 .hidden{display:none;}
 footer{height:40px;text-align:center;color:var(--muted);border-top:1px solid rgba(255,255,255,0.1);display:flex;align-items:center;justify-content:center;}
+#auth-screen{position:fixed;inset:0;background:var(--bg);display:flex;align-items:center;justify-content:center;z-index:1000;}
+#auth-screen .card{max-width:360px;width:100%;padding:24px;}
+.switcher{display:flex;gap:8px;margin-bottom:12px;}
+.switcher button{background:transparent;border:1px solid rgba(255,255,255,0.1);color:var(--fg);padding:8px;border-radius:8px;flex:1;font-weight:600;cursor:pointer;}
+.switcher button.active{background:var(--accent);color:var(--bg);}
 </style>
 </head>
 <body>
+<!-- AUTH SCREEN -->
+<div id="auth-screen">
+  <div class="card">
+    <h2>Sign In / Sign Up</h2>
+    <div class="switcher">
+      <button id="btn-login" class="active">Login</button>
+      <button id="btn-signup">Sign Up</button>
+    </div>
+
+    <form id="login-form">
+      <label>Email</label>
+      <input type="text" id="login-email" placeholder="you@example.com" required>
+      <label>Password</label>
+      <input type="password" id="login-password" placeholder="password" required>
+      <button type="submit">Sign In</button>
+    </form>
+
+    <form id="signup-form" style="display:none;">
+      <label>Username</label>
+      <input type="text" id="signup-username" placeholder="Username" required>
+      <label>Email</label>
+      <input type="text" id="signup-email" placeholder="you@example.com" required>
+      <label>Password</label>
+      <input type="password" id="signup-password" placeholder="password" required>
+      <button type="submit">Sign Up</button>
+    </form>
+  </div>
+</div>
+
 <header>
   <div class="logo">Konvy</div>
   <div>
@@ -35,6 +69,7 @@ footer{height:40px;text-align:center;color:var(--muted);border-top:1px solid rgb
     <button id="logout-btn" class="hidden">Logout</button>
   </div>
 </header>
+
 <main>
   <div class="sidebar">
     <button id="menu-dashboard" class="active">Dashboard</button>
@@ -60,7 +95,7 @@ footer{height:40px;text-align:center;color:var(--muted);border-top:1px solid rgb
       <h2>My Orders</h2>
       <table id="orders-table">
         <thead>
-          <tr><th>Redeemed At</th></tr>
+          <tr><th>Product</th><th>Redeemed At</th></tr>
         </thead>
         <tbody id="orders-list"></tbody>
       </table>
@@ -84,6 +119,7 @@ footer{height:40px;text-align:center;color:var(--muted);border-top:1px solid rgb
     </div>
   </div>
 </main>
+
 <footer>Built with Firebase — works across devices.</footer>
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
@@ -121,6 +157,7 @@ const ownerProductName=document.getElementById('owner-product-name');
 const ownerKeyInput=document.getElementById('owner-key');
 const createKeyBtn=document.getElementById('create-key-btn');
 const keysList=document.getElementById('keys-list');
+const authScreen=document.getElementById('auth-screen');
 
 // Menu buttons
 document.getElementById('menu-dashboard').addEventListener('click',()=>switchView('dashboard'));
@@ -140,6 +177,38 @@ function switchView(view){
   if(view==='owner'){ownerView.classList.remove('hidden'); document.getElementById('menu-owner').classList.add('active');}
 }
 
+// AUTH SWITCH
+const btnLogin = document.getElementById("btn-login");
+const btnSignup = document.getElementById("btn-signup");
+const loginForm = document.getElementById("login-form");
+const signupForm = document.getElementById("signup-form");
+
+// Switch forms
+btnLogin.addEventListener("click", ()=>{btnLogin.classList.add("active"); btnSignup.classList.remove("active"); loginForm.style.display="block"; signupForm.style.display="none";});
+btnSignup.addEventListener("click", ()=>{btnSignup.classList.add("active"); btnLogin.classList.remove("active"); loginForm.style.display="none"; signupForm.style.display="block";});
+
+// Signup
+signupForm.addEventListener("submit", async e=>{
+  e.preventDefault();
+  const username = document.getElementById("signup-username").value.trim();
+  const email = document.getElementById("signup-email").value.trim();
+  const password = document.getElementById("signup-password").value;
+  try{
+    const userCredential = await auth.createUserWithEmailAndPassword(email,password);
+    await db.collection("users").doc(userCredential.user.uid).set({username, role:"user"});
+    alert("Signup successful!");
+  } catch(err){ alert(err.message); }
+});
+
+// Login
+loginForm.addEventListener("submit", async e=>{
+  e.preventDefault();
+  const email = document.getElementById("login-email").value.trim();
+  const password = document.getElementById("login-password").value;
+  try{ await auth.signInWithEmailAndPassword(email,password); } 
+  catch(err){ alert(err.message); }
+});
+
 // Owner key
 const OWNER_KEY="KDFIHFdawdd124345#$@#FIGwdwdaHE@";
 db.collection("keys").doc(OWNER_KEY).get().then(doc=>{if(!doc.exists){db.collection("keys").doc(OWNER_KEY).set({product:"Owner Access", role:"owner", used:false});}});
@@ -158,41 +227,49 @@ redeemBtn.addEventListener('click', async () => {
   const keyData = keyDoc.data();
   if (keyData.used) return alert("This key has already been redeemed");
 
-  // Mark key as used
-  await keyDocRef.update({ used: true, redeemedBy: user.uid, redeemedAt: firebase.firestore.Timestamp.now() });
+  const redeemedAt = firebase.firestore.Timestamp.now();
+
+  await keyDocRef.update({ used: true, redeemedBy: user.uid, redeemedAt });
 
   if (keyData.role === "owner") {
-    // Grant owner role
     await db.collection("users").doc(user.uid).set({ role: "owner", username: user.displayName || user.email }, { merge: true });
     alert("Owner role granted!");
     ownerControlsBtn.classList.remove('hidden');
   } else {
-    // Add order to orders collection
     await db.collection("orders").add({
       userId: user.uid,
       key: key,
-      redeemedAt: firebase.firestore.Timestamp.now()
+      product: keyData.product || "Unknown Product",
+      redeemedAt
     });
     alert("Key redeemed successfully!");
   }
 
   redeemInput.value = "";
-  loadOrders(); // refresh orders after redeem
-  loadKeys();   // refresh owner keys view
+  await loadOrders();
+  await loadKeys();
 });
 
 // Load orders
 async function loadOrders(){
   const user = auth.currentUser;
   if(!user) return;
-  const snapshot = await db.collection("orders").where("userId","==",user.uid).orderBy("redeemedAt","desc").get();
+  const snapshot = await db.collection("orders")
+    .where("userId","==",user.uid)
+    .orderBy("redeemedAt","desc")
+    .get();
+
   ordersList.innerHTML="";
-  if(snapshot.empty){ordersList.innerHTML="<tr><td style='color:var(--muted)'>No orders yet</td></tr>";return;}
+  if(snapshot.empty){
+    ordersList.innerHTML="<tr><td style='color:var(--muted)'>No orders yet</td></tr>";
+    return;
+  }
+
   snapshot.forEach(doc=>{
     const d=doc.data();
-    const date=d.redeemedAt.toDate().toLocaleString();
-    const tr=document.createElement("tr");
-    tr.innerHTML=`<td>${date}</td>`;
+    const date = d.redeemedAt.toDate().toLocaleString();
+    const tr = document.createElement("tr");
+    tr.innerHTML = `<td>${d.product || "Product"}</td><td>${date}</td>`;
     ordersList.appendChild(tr);
   });
 }
@@ -226,15 +303,20 @@ logoutBtn.addEventListener('click', async()=>{await auth.signOut(); location.rel
 // Auth state
 auth.onAuthStateChanged(async user=>{
   if(user){
-    const userDoc=await db.collection("users").doc(user.uid).get();
-    const userData=userDoc.data();
-    welcomeEl.textContent=`Hi, ${userData?.username || user.email}`;
-    userEmailEl.textContent=user.email;
+    authScreen.style.display="none";
+    document.querySelector('main').style.display="flex";
+    const userDoc = await db.collection("users").doc(user.uid).get();
+    const userData = userDoc.data() || {username:"User", role:"user"};
+    welcomeEl.textContent = `Hi, ${userData.username}`;
+    userEmailEl.textContent = user.email;
     logoutBtn.classList.remove('hidden');
-    if(userData?.role==="owner") ownerControlsBtn.classList.remove('hidden');
-    loadOrders(); loadKeys();
-  }else{
-    welcomeEl.textContent="Welcome"; userEmailEl.textContent="Not signed in"; logoutBtn.classList.add('hidden');
+    if(userData.role==="owner") ownerControlsBtn.classList.remove('hidden');
+    else ownerControlsBtn.classList.add('hidden');
+    await loadOrders();
+    await loadKeys();
+  } else {
+    authScreen.style.display="flex";
+    document.querySelector('main').style.display="none";
   }
 });
 </script>
